Frankbelford/uatv1ba/force-app/main/default/objects/IP_ImpellamGlobalSetting__c/IP_ImpellamGlobalSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>RSS Global Settings Outbound Transf</label>
</CustomObject>