Frankbelford/uatv1ba/force-app/main/default/objects/IP_ImpellamGlobalSetting__c/fields/IP_LastTransmissionDate__c.field-meta.xml
<CustomField>
    <fullName>IP_LastTransmissionDate__c</fullName>
    <label>Last Transmission Date</label>
    <type>DateTime</type>
</CustomField>