Frankbelford/uatv1ba/force-app/main/default/objects/IP_ImpellamGlobalSetting__c/fields/IP_OutboundErrorEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>IP_OutboundErrorEmailAddress__c</fullName>
    <label>Outbound Error Email Address</label>
    <type>Email</type>
</CustomField>