Frankbelford/uatv1ba/force-app/main/default/objects/IP_ImpellamGlobalSetting__c/fields/IP_OutboundWriteBatchsize__c.field-meta.xml
<CustomField>
    <fullName>IP_OutboundWriteBatchsize__c</fullName>
    <label>Outbound Write Batch size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>