Frankbelford/uatv1ba/force-app/main/default/objects/IP_ImpellamGlobalSetting__c/fields/IP_UnlockTimesheetBatchSize__c.field-meta.xml
<CustomField>
    <fullName>IP_UnlockTimesheetBatchSize__c</fullName>
    <label>UnlockTimesheetBatchSize</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>