Frankbelford/uatv1ba/force-app/main/default/objects/IP_ImpellamGlobalSetting__c/fields/S_placement_Deletion_Size__c.field-meta.xml
<CustomField>
    <fullName>S_placement_Deletion_Size__c</fullName>
    <label>S-placement Deletion Batch Size</label>
    <length>10</length>
    <type>Text</type>
</CustomField>