Frankbelford/uatv1ba/force-app/main/default/objects/IP_ImpellamGlobalSetting__c/fields/S_placementLimitSize__c.field-meta.xml
<CustomField>
    <fullName>S_placementLimitSize__c</fullName>
    <label>S-placementLimitSize</label>
    <length>20</length>
    <type>Text</type>
</CustomField>