Frankbelford/uatv1ba/force-app/main/default/objects/IP_ImpellamGlobalSetting__c/fields/ToeBatchDateFilter__c.field-meta.xml
<CustomField>
    <fullName>ToeBatchDateFilter__c</fullName>
    <label>ToeBatchDateFilter</label>
    <type>Date</type>
</CustomField>