Frankbelford/uatv1ba/force-app/main/default/objects/IP_ImpellamGlobalSetting__c/fields/ToeDaysFilter__c.field-meta.xml
<CustomField>
    <fullName>ToeDaysFilter__c</fullName>
    <label>ToeBatchDaysFilter</label>
    <length>20</length>
    <type>Text</type>
</CustomField>